src/snapshots/cosmic_ext_applet_sysinfo__template__test__minimal.snap
---
source: src/template.rs
expression: "parse(\"{cpu_usage} {ram_usage}\")"
---
Template {
    segments: [
        Variable(
            CpuUsage,
        ),
        Literal(
            " ",
        ),
        Variable(
            RamUsage,
        ),
    ],
    requires: Requires {
        cpu_temp: false,
        gpu_temp: false,
        gpu_usage: false,
    },
}
