src/snapshots/cosmic_ext_applet_sysinfo__template__test__temps only.snap
---
source: src/template.rs
expression: "parse(\"CPU {cpu_temp} GPU {gpu_temp}\")"
---
Template {
    segments: [
        Literal(
            "CPU ",
        ),
        Variable(
            CpuTemp,
        ),
        Literal(
            " GPU ",
        ),
        Variable(
            GpuTemp,
        ),
    ],
    requires: Requires {
        cpu_temp: true,
        gpu_temp: true,
        gpu_usage: false,
    },
}
